# port-scout

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
scripts/: sync-version.mjs
src/: App.tsx  app.css  main.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
